--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "webpack-npm-publishing-template",
-  "version": "0.0.1",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "html-webpack-plugin": "^5.5.1",
-    "webpack": "^5.4.0",
-    "webpack-cli": "^4.2.0"
-  }
+    "name": "webpack-npm-publishing-template",
+    "version": "0.0.1",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "webpack-dev-server --config config/webpack.config.js"
+    },
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "webpack": "^5.4.0",
+        "webpack-cli": "^4.9.0",
+        "webpack-dev-server": "4.12.0",
+        "html-webpack-plugin": "^5.2.0"
+    }
 }
