--- a/package.json
+++ b/package.json
@@ -2,17 +2,21 @@
     "name": "webpack-npm-publishing-template",
     "version": "0.0.1",
     "description": "",
-    "main": "index.js",
+    "main": "lib/index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "webpack-dev-server --config config/webpack.config.js"
+        "start": "webpack-dev-server --config config/webpack.config.js",
+        "build": "webpack --config config/webpack.prod.config.js"
     },
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "css-loader": "^6.7.3",
+        "html-webpack-plugin": "^5.2.0",
+        "mini-css-extract-plugin": "^2.7.6",
+        "style-loader": "^3.3.2",
         "webpack": "^5.4.0",
         "webpack-cli": "^4.9.0",
-        "webpack-dev-server": "4.12.0",
-        "html-webpack-plugin": "^5.2.0"
+        "webpack-dev-server": "4.12.0"
     }
 }
