--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "webpack-npm-publishing-template",
+    "name": "long-vue-ui",
     "version": "0.0.1",
     "description": "",
     "main": "lib/index.js",
@@ -15,8 +15,12 @@
         "html-webpack-plugin": "^5.2.0",
         "mini-css-extract-plugin": "^2.7.6",
         "style-loader": "^3.3.2",
+        "vue": "^3.2.36",
+        "vue-loader": "^17.0.1",
         "webpack": "^5.4.0",
         "webpack-cli": "^4.9.0",
-        "webpack-dev-server": "4.12.0"
-    }
+        "webpack-dev-server": "4.12.0",
+        "vue-router": "^4.2.2"
+    },
+    "dependencies": {}
 }
