--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
     "license": "ISC",
     "devDependencies": {
         "css-loader": "^6.7.3",
+        "element-plus": "^2.3.7",
         "html-webpack-plugin": "^5.2.0",
         "mini-css-extract-plugin": "^2.7.6",
         "style-loader": "^3.3.2",
         "vue": "^3.2.36",
         "vue-loader": "^17.0.1",
+        "vue-router": "^4.2.2",
         "webpack": "^5.4.0",
         "webpack-cli": "^4.9.0",
-        "webpack-dev-server": "4.12.0",
-        "vue-router": "^4.2.2"
-    },
-    "dependencies": {}
+        "webpack-dev-server": "4.12.0"
+    }
 }
