--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
         "file-loader": "^6.2.0",
         "html-webpack-plugin": "^5.2.0",
         "mini-css-extract-plugin": "^2.7.6",
+        "pinia": "^2.0.33",
         "style-loader": "^3.3.2",
         "vue": "^3.2.36",
         "vue-loader": "^17.0.1",
         "vue-router": "^4.2.2",
+        "vuedraggable": "^4.1.0",
         "webpack": "^5.4.0",
         "webpack-cli": "^4.9.0",
         "webpack-dev-server": "4.12.0"
