--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@babel/core": "^7.23.0",
+        "@babel/preset-env": "^7.22.20",
+        "@babel/preset-react": "^7.22.15",
+        "babel-loader": "^9.1.3",
         "css-loader": "^6.7.3",
         "html-webpack-plugin": "^5.2.0",
         "mini-css-extract-plugin": "^2.7.6",
@@ -18,5 +22,9 @@
         "webpack": "^5.4.0",
         "webpack-cli": "^4.9.0",
         "webpack-dev-server": "4.12.0"
+    },
+    "dependencies": {
+        "react": "^16.8.0",
+        "react-dom": "^16.8.0"
     }
 }
