--- a/package.json
+++ b/package.json
@@ -11,20 +11,24 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@ant-design/icons": "^5.2.6",
         "@babel/core": "^7.23.0",
         "@babel/preset-env": "^7.22.20",
         "@babel/preset-react": "^7.22.15",
+        "antd": "^5.9.3",
         "babel-loader": "^9.1.3",
         "css-loader": "^6.7.3",
         "html-webpack-plugin": "^5.2.0",
         "mini-css-extract-plugin": "^2.7.6",
+        "node-sass": "^6.0.1",
+        "react": "^16.8.0",
+        "react-dom": "^16.8.0",
+        "react-router-dom": "^5.3.4",
+        "sass": "^1.68.0",
+        "sass-loader": "^10.2.1",
         "style-loader": "^3.3.2",
         "webpack": "^5.4.0",
         "webpack-cli": "^4.9.0",
         "webpack-dev-server": "4.12.0"
-    },
-    "dependencies": {
-        "react": "^16.8.0",
-        "react-dom": "^16.8.0"
     }
 }
