--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
         "@babel/core": "^7.23.0",
         "@babel/preset-env": "^7.22.20",
         "@babel/preset-react": "^7.22.15",
+        "@bpmn-io/properties-panel": "^3.13.0",
         "antd": "^5.9.3",
         "babel-loader": "^9.1.3",
+        "bpmn-js": "^15.1.3",
+        "bpmn-js-properties-panel": "^5.6.1",
+        "bpmn-js-token-simulation": "^0.31.1",
         "css-loader": "^6.7.3",
         "html-webpack-plugin": "^5.2.0",
         "mini-css-extract-plugin": "^2.7.6",
@@ -29,6 +33,7 @@
         "style-loader": "^3.3.2",
         "webpack": "^5.4.0",
         "webpack-cli": "^4.9.0",
-        "webpack-dev-server": "4.12.0"
+        "webpack-dev-server": "4.12.0",
+        "xml-loader": "^1.2.1"
     }
 }
