--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "webpack-dev-server --config config/webpack.config.js",
-        "build": "webpack --config config/webpack.prod.config.js"
+        "build:dev": "webpack --config config/webpack.config.js",
+        "build:prod": "webpack --config config/webpack.prod.config.js"
     },
     "author": "",
     "license": "ISC",
